[project]
name = "learning-langgraph-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.2",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.33",
    "langgraph>=0.6.7",
    "openai>=1.107.3",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "tavily-python>=0.7.12",
    "uvicorn>=0.35.0",
]
